# upgini

./: .coveragerc  .gitignore  .gitpod.yml  BACK-1388_smoke_test.ipynb  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  error_status.txt  gitpod_init.sh  pyproject.toml  requirements.txt  setup.py  setup_.py  split.py  tox.ini
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: codeql.yml
.jupyter/custom/: custom.js
binder/: Dockerfile  postBuild  requirements.txt
js/: a.js
notebooks/: Upgini_Features_search&generation.ipynb  demo_email.txt  kaggle_example.ipynb  senat_election_results_2022.parquet
notebooks/digest202211/: Partitioned_parquet_reading_bench.ipynb  bench_data_2007.parquet  bench_data_2008.parquet  bench_data_2009.parquet  bench_data_2010.parquet  bench_data_2011.parquet  bench_data_2012.parquet
notebooks/senat_election/: elections_forescast.ipynb
notebooks/senate_elections/: elections_forescast.ipynb  us_zip_elections.ipynb  us_zip_elections.parquet
src/upgini/: __about__.py  __init__.py  ads.py  dataset.py  errors.py  features_enricher.py  http.py  lazy_import.py  metadata.py  metrics.py  search_task.py  spinner.py  strings.properties  version_validator.py
src/upgini/ads_management/: __init__.py  ads_manager.py
src/upgini/autofe/: all_operands.py  all_operators.py  binary.py  date.py  feature.py  groupby.py  operand.py  operator.py  timeseries.py  unary.py  utils.py  vector.py
src/upgini/autofe/timeseries/: __init__.py  base.py  cross.py  delta.py  lag.py  roll.py  trend.py  volatility.py
src/upgini/data_source/: data_source_publisher.py
src/upgini/mdc/: __init__.py  context.py
src/upgini/normalizer/: normalize_utils.py  phone_normalizer.py
src/upgini/resource_bundle/: __init__.py  exceptions.py  strings.properties  strings_widget.properties
src/upgini/sampler/: base.py  random_under_sampler.py  utils.py
src/upgini/utils/: __init__.py  base_search_key_detector.py  blocked_time_series.py  config.py  country_utils.py  custom_loss_utils.py  cv_utils.py  datetime_utils.py  deduplicate_utils.py  display_utils.py  email_utils.py  fallback_progress_bar.py  feature_info.py  features_validator.py  format.py  hash_utils.py  ip_utils.py  mstats.py  one_hot_encoder.py  phone_utils.py  postal_code_utils.py  progress_bar.py  psi.py  sample_utils.py  sklearn_ext.py  sort.py  target_utils.py  track_info.py  ts_utils.py  warning_counter.py
tests/: conftest.py  test_autofe.py  test_autofe_operands.py  test_autofe_registry.py  test_binary_dataset.py  test_blocked_time_series.py  test_categorical_dataset.py  test_continuous_dataset.py  test_country_utils.py  test_custom_loss_utils.py  test_datasource_publisher.py  test_datetime_utils.py  test_email_utils.py  test_etalon_validation.py  test_eval_sets.py  test_features_enricher.py  test_features_validator.py  test_metadata.py  test_metrics.py  test_native_api.py  test_phone_utils.py  test_postal_code_utils.py  test_sample_utils.py  test_shap_metrics.py  test_target_utils.py  test_ts_utils.py  test_widget.py  utils.py
tests/autofe/: test_autofe_registry.py  test_bin.py  test_cross.py  test_date_diff.py  test_delta.py  test_dist.py  test_distance.py  test_ewma_vol.py  test_feature.py  test_lag.py  test_norm.py  test_operator_registry.py  test_outlier_distance.py  test_percentile.py  test_roll.py  test_rolling_vol.py  test_rolling_vol2.py  test_sim.py  test_trend.py  test_unary.py  test_vector.py  test_volatility_base.py  test_volatility_ratio.py
tests/normalizer/: phone_normalizer_test.py  test_phone_normalizer.py
tests/test_data/: complex_feature_name_features.parquet  complex_feature_name_features_with_entity_system_record_id.parquet  complex_feature_name_tds.parquet  real_enriched_eval_x.parquet  real_enriched_x.parquet  real_test.parquet  real_test_df.parquet  real_train.parquet  real_train_df.parquet
tests/test_data/binary/: blocked_ts_logic.csv  data.csv  data_with_time.parquet  expected_prepared.parquet  expected_prepared_imbalance.parquet  expected_prepared_imbalanced.parquet  expected_prepared_with_entity_system_record_id.parquet  features_imbalanced.parquet  features_imbalanced_with_entity_system_record_id.parquet  features_imbalanced_with_entity_system_record_id_validation.parquet  initial_eval1_imbalanced.parquet  initial_eval2_imbalanced.parquet  initial_oot_imbalanced.parquet  initial_train_imbalanced.parquet  mock_features.parquet  mock_features_with_entity_system_record_id.parquet  valid_data.parquet  validation_df.parquet  validation_features.parquet  validation_features_v1.parquet  validation_features_v1_with_entity_system_record_id.parquet  validation_features_v2.parquet  validation_features_v2_with_entity_system_record_id.parquet
tests/test_data/demo/: file_meta.json  provider_meta.json  x_enriched.parquet  x_sampled.parquet  y_sampled.parquet
tests/test_data/enricher/: features.parquet  features_regression_date_country_postal.parquet  features_with_entity_system_record_id.parquet  input.csv  input.parquet  input_multiclass.csv  input_with_cat.csv  input_with_cat.parquet  input_with_string_feature.parquet  metadata_regression_date_country_postal.json  target_outliers_regression_date_country_postal.parquet  tds_regression_date_country_postal.parquet  validation_features.parquet  validation_features_with_entity_system_record_id.parquet
tests/test_data/enricher/test_features_enricher/: test_features_enricher.csv  test_features_enricher_features_info.csv  test_features_enricher_features_info_after_metrics.csv  test_features_enricher_with_complex_feature_names_features_info.csv  test_features_enricher_with_complex_feature_names_features_info_after_metrics.csv  test_features_enricher_with_complex_feature_names_metrics.csv  test_features_enricher_with_datetime_metrics.csv  test_features_enricher_with_demo_key_features_info.csv  test_features_enricher_with_demo_key_metrics.csv  (+22 more)
tests/test_data/widget/: features.parquet  tds.parquet
tests/utils/: test_deduplicate_utils.py  test_one_hot_detector.py  test_psi.py
tmp/: df.parquet
(+16 files in other folders)
