[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upgini"
dynamic = ["version"]
description = "Intelligent data search & enrichment for Machine Learning"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Upgini Developers", email = "madewithlove@upgini.com" },
]
keywords = [
    "automl",
    "data mining",
    "data science",
    "data search",
    "machine learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "catboost>=1.0.3",
    "lightgbm>=4.6.0",
    "shap>=0.44.0",
    "fastparquet>=0.8.1",
    "ipywidgets>=8.1.0",
    "numpy>=1.19.0,<3.0.0",
    "pandas>=1.1.0,<3.0.0",
    "pydantic>1.0.0,<3.0.0",
    "pyjwt>=2.8.0",
    "python-dateutil>=2.8.0",
    "python-json-logger>=3.3.0",
    "requests>=2.8.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "python-bidi==0.4.2",
    "xhtml2pdf>=0.2.11,<0.3.0",
    "jarowinkler>=2.0.0",
    "levenshtein>=0.25.1",
    "psutil>=5.9.0",
    "category-encoders>=2.8.1",
]

[project.urls]
"Bug Reports" = "https://github.com/upgini/upgini/issues"
Homepage = "https://upgini.com/"
Source = "https://github.com/upgini/upgini"

[tool.hatch.version]
path = "src/upgini/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/upgini"
]

[tool.hatch.build]
include = [
  "/src/utils/Roboto-Regular.ttf",
]

[tool.hatch.envs.default]
type = "virtual"
python = "3.11"

[tool.hatch.envs.test.scripts]
cov = 'pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=upgini --cov=tests'
format = "black {args}"
lint = "ruff check {args}"
test_all = 'pytest -s -vv tests'

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]
pandas = ["1.2.0", "1.3.0", "1.4.0", "1.5.0", "2.0.0", "2.1.0", "2.2.0"]

# from versions: 0.1, 0.2, 0.3.0, 0.4.0, 0.4.1, 0.4.2, 0.4.3, 0.5.0, 0.6.0, 0.6.1, 0.7.0, 0.7.1, 0.7.2, 0.7.3, 0.8.0, 0.8.1, 0.9.0, 0.9.1, 0.10.0, 0.10.1, 0.11.0, 0.12.0, 0.13.0, 0.13.1, 0.14.0, 0.14.1, 0.15.0, 0.15.1, 0.15.2, 0.16.0, 0.16.1, 0.16.2, 0.17.0, 0.17.1, 0.18.0, 0.18.1, 0.19.0, 0.19.1, 0.19.2, 0.20.0, 0.20.1, 0.20.2, 0.20.3, 0.21.0, 0.21.1, 0.22.0, 0.23.0, 0.23.1, 0.23.2, 0.23.3, 0.23.4, 0.24.0, 0.24.1, 0.24.2, 0.25.0, 0.25.1, 0.25.2, 0.25.3, 1.0.0, 1.0.1, 1.0.2, 1.0.3, 1.0.4, 1.0.5, 1.1.0, 1.1.1, 1.1.2, 1.1.3, 1.1.4, 1.1.5, 1.2.0, 1.2.1, 1.2.2, 1.2.3, 1.2.4, 1.2.5, 1.3.0, 1.3.1, 1.3.2, 1.3.3, 1.3.4, 1.3.5, 1.4.0rc0, 1.4.0, 1.4.1, 1.4.2, 1.4.3, 1.4.4, 1.5.0rc0, 1.5.0, 1.5.1, 1.5.2, 1.5.3, 2.0.0rc0, 2.0.0rc1, 2.0.0, 2.0.1, 2.0.2, 2.0.3

[tool.hatch.envs.test]
dependencies = [
  "catboost>=1.2.8",
  "coverage[toml]",
  "pytest",
  "pytest-cov",
  "requests-mock",
  "pytest-datafiles",
  "pytest-xdist",
  "pandas~={matrix:pandas}",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]
addopts="-n 4"